<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="fillooow.app.customprogressbar.LinearSpeedometerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        tools:context=".LinearSpeedometerActivity">

        <TextView
            android:id="@+id/linear_speedometer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/linear_speedometer_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fillooow.app.customprogressbar.custom_view.linear.LinearSpeedometerProgressView
            android:id="@+id/linear_speedometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:animatedProgress="@{vm.linearProgress}"
            app:progressColorResId="@{vm.progressColorResId}"
            app:useRainbowColorResId="@{vm.isRainbowResIdUsing}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_speedometer_label" />

        <TextView
            android:id="@+id/activity_linear_text_input_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_input_numbers"
            android:gravity="center"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_speedometer" />

        <EditText
            android:id="@+id/linear_activity_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:inputType="text"
            android:text="@={vm.editTextCharacters}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_linear_text_input_symbols" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="@{(v) -> vm.onStartAnimationClick(v)}"
            android:text="@string/start_animation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_activity_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>