<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="fillooow.app.customprogressbar.AllSpeedometersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:screenOrientation="portrait"
        tools:context=".AllSpeedometersActivity">

        <TextView
            android:id="@+id/linear_speedometer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/linear_speedometer_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <fillooow.app.customprogressbar.custom_view.linear.LinearSpeedometerProgressView
            android:id="@+id/linear_speedometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:animatedProgress="@{vm.linearProgress}"
            app:progressColorResId="@{vm.progressColorLinearResId}"
            app:useRainbowColorResId="@{vm.useRainbowResIdUsing}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_speedometer_label" />

        <TextView
            android:id="@+id/radial_speedometer_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/radial_speedometer_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_speedometer" />

        <fillooow.app.customprogressbar.custom_view.radial.TochkaRadialSpeedometerView
            android:id="@+id/radial_speedometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:animatedProgress="@{vm.radialProgress}"
            app:speedometerText="@{vm.speedometerText}"
            app:useRainbowColorResId="@{vm.useRainbowResIdUsing}"
            app:progressColorResId="@{vm.progressColorRadialResId}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radial_speedometer_label" />

        <LinearLayout
            android:id="@+id/all_speedometers_checkbox_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radial_speedometer">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_color_on_fly"
                android:layout_marginStart="40dp"/>

            <CheckBox
                android:id="@+id/linear_rainbow_color_res_id_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:checked="@={vm.useRainbowResIdUsing}" />

        </LinearLayout>

        <Button
            android:id="@+id/all_speedometers_btn_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="@{vm.isTestAllLinearBtnEnabled}"
            android:onClick="@{view -> vm.testAllDivisionsLinear(view)}"
            android:text="Проверка всех делений у Linear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/all_speedometers_checkbox_container" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="@{vm.isTestAllRadialBtnEnabled}"
            android:onClick="@{view -> vm.testAllDivisionsRadial(view)}"
            android:text="Проверка всех делений у Radial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/all_speedometers_btn_linear" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>